[package]
name = "supervisor"
version = "0.0.1"
authors = ["Chris Williams <chrisw@diosix.org>"]
license = "MIT"
edition = "2018"
publish = false

# external dependencies
[dependencies.riscv]
version = "0.7.0"
features = [ "inline-asm" ]

[dependencies.spinning]
git = "https://github.com/diodesign/spinning-rs"
default-features = false

[dependencies.linked_list_allocator]
version = "0.9.0"
